<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.farmfresh.android.dashboard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.farmfresh.android.dashboard.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.farmfresh.android.dashboard.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/navigation_myads"
        android:name="com.farmfresh.android.dashboard.ui.myads.MyadsFragment"
        android:label="@string/title_myads"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.farmfresh.android.dashboard.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_sell" />
</navigation>
